# zopfli

./: .gitignore
python/zopfli/: CMakeLists.txt  module.cpp  setup.py
python/zopfli/src/pybind/: bindings.h  lz77.cpp  module.cpp  squeeze.cpp
python/zopfli/src/pyzopfli/: __init__.py  module.cpp
python/zopfli/src/pyzopfli/lz77/: __init__.py
python/zopfli/tests/: test_compress.py
src/zopfli/: cache.h  hash.h  lz77.h  squeeze.h  zopfli.h
